Cycles bake disregards Auto Smooth (vertex per-face normals) #43786

Closed
opened 2015-02-23 12:37:26 +01:00 by Stanislav Blinov · 8 comments

System Information
Linux 64bit

Blender Version
Broken: always? Tested with 2.72, 2.73a, buildbot 2.73-8757209

Short description of error
Baking with Cycles does not take vertex per-face normals into account, resulting in e.g. incorrect normal map bakes.

Exact steps for others to reproduce the error

  1. Open cycles_bake_autosmooth.blend.
  2. Press Bake
  3. Note the resulting normal map
  4. In Modifiers buttons, disable Edge Split modifier's renderability
  5. In Render buttons, press Bake
  6. Note how resulting normal map differs from step 3

This happens regardless of whether Cage baking is used. Blender Render does not seem to reproduce this (Lowpoly object is also set up for Blender Render bake for verification).

**System Information** Linux 64bit **Blender Version** Broken: always? Tested with 2.72, 2.73a, buildbot 2.73-8757209 **Short description of error** Baking with Cycles does not take vertex per-face normals into account, resulting in e.g. incorrect normal map bakes. **Exact steps for others to reproduce the error** 1. Open [cycles_bake_autosmooth.blend](https://archive.blender.org/developer/F145403/cycles_bake_autosmooth.blend). 2. Press Bake 3. Note the resulting normal map 4. In Modifiers buttons, disable Edge Split modifier's renderability 5. In Render buttons, press Bake 6. Note how resulting normal map differs from step 3 This happens regardless of whether Cage baking is used. Blender Render does not seem to reproduce this (Lowpoly object is also set up for Blender Render bake for verification).

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

Added subscribers: @dfelinto, @Sergey

Added subscribers: @dfelinto, @Sergey

Either me or @dfelinto will have a closer look here :)

Either me or @dfelinto will have a closer look here :)
Sergey Sharybin self-assigned this 2015-03-10 17:48:02 +01:00

Prepared a patch fr this bug, see D1174.

Prepared a patch fr this bug, see [D1174](https://archive.blender.org/developer/D1174).

This issue was referenced by 1cd4070e35

This issue was referenced by 1cd4070e35fa8439bffcf500487e9922e11bd1d4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1cd4070e35.

Closed by commit 1cd4070e35.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43786
No description provided.